--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -7,9 +7,9 @@
       },
       "source": [
         "# Proyek Analisis Data: [Input Nama Dataset]\n",
-        "- **Nama:** [Input Nama]\n",
-        "- **Email:** [Input Email]\n",
-        "- **ID Dicoding:** [Input Username]"
+        "- **Nama:** Muhamad Yuan Sastro Dimianta\n",
+        "- **Email:** yuandimianta@gmail.com\n",
+        "- **ID Dicoding:** yuandimianta"
       ]
     },
     {
